manifests/envoy-gateway/common-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-common
  namespace: envoy
spec:
  gatewayClassName: envoy
  # Use the EnvoyProxy resource from above to configure all
  # Kubernetes resources needed to run this Gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-proxy
  listeners:
    - name: localtest-me-http
      hostname: "*.localtest.me"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: localtest-me-https
      hostname: "*.localtest.me"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        # Use Passthrough to let backend Pods do TLS termination instead
        mode: Terminate
        certificateRefs: # Remove if using Passthrough
          - kind: Secret
            name: localtest-me-tls
