manifests/envoy-gateway/healthcheck-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: healthcheck
  namespace: envoy
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy
      name: envoy-common
      sectionName: localtest-me-http
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy
      name: envoy-common
      sectionName: localtest-me-https
  hostnames:
    - "healthcheck.localtest.me"
  rules:
    - name: catch-all
      matches:
        - path:
            type: Exact
            value: /healthz
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: healthcheck-route-filter
      timeouts:
        request: 1s
        backendRequest: 1s
